Update Exploring eBay Car Sales Data.ipynb

--- a/Exploring eBay Car Sales Data.ipynb
+++ b/Exploring eBay Car Sales Data.ipynb
@@ -3281,11 +3281,11 @@
    "source": [
     "Our main observations were : \n",
     "\n",
-    "* The most expensive average of a brand was around \$9000 by Audi.\n",
+    "* The most expensive average of a brand was around $9000 by Audi.\n",
     "* Only 6 brands constitute more than 5% - Volkswagen, Opel, BMW, Mercedes Benz, Audi and Ford\n",
     "* The Most common brand/model combination is Volswagen Golf with an average price of $5000 and the average odometer reading is 128 thousand kms. \n",
     "* We observe that the less driven cars are, the more expensive they are, and that's logical too.\n",
-    "* We observe that the cars with unrepaired damage are very cheap, with difference of about \$4800."
+    "* We observe that the cars with unrepaired damage are very cheap, with difference of about $4800."
    ]
   }
  ],
